--- a/.circleci/circleci-build-ubuntu18.04-py378/Dockerfile
+++ b/.circleci/circleci-build-ubuntu18.04-py378/Dockerfile
@@ -120,3 +120,5 @@ RUN git clone https://github.com/legacysurvey/unwise_psf.git \
     && git checkout dr9.3
 
 RUN ln -s /usr/bin/sextractor /usr/bin/source-extractor
+
+RUN python3.8 -m pip install fitsio
