--- a/.circleci/circleci-build-ubuntu24.04/Dockerfile
+++ b/.circleci/circleci-build-ubuntu24.04/Dockerfile
@@ -90,3 +90,5 @@ ENV DUST_DIR=/src/dust
 RUN git clone https://github.com/legacysurvey/unwise_psf.git
 
 ENV PYTHONPATH=/usr/local/lib/python:/src/unwise_psf/py:/src/legacypipe/py
+
+RUN python3.12 -m pip install --no-cache-dir coverage coveralls
