circleci: drop some builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,6 +193,6 @@ workflows:
       - "build-from-docker-u2204-py3.10"
       - "build-from-docker-u2004-py3.8"
       - "build-from-docker-u2004-py3.9"
-      - "build-from-docker-u1804-py3.6"
-      - "build-from-docker-u1804-py3.7"
       - "build-from-docker-u1804-py3.8"
+#      - "build-from-docker-u1804-py3.7"
+#      - "build-from-docker-u1804-py3.6"
